--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "pg": "^8.13.1",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.5",
-    "sequelize-cli": "^6.6.2"
+    "sequelize-cli": "^6.6.2",
+    "socket.io": "^4.8.1",
+    "websocket": "^1.0.35"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
